vtex.store-components.css inserção de código

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -24,7 +24,7 @@
 .infoCarContainer {
     max-width: 1260px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 
 }
 
 .infoCardContainer--vintage {
