--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -21,7 +21,7 @@
     border: transparent;
 }
 
-.infoCarContainer {
+.infoCardContainer {
     max-width: 1260px;
     margin: 0 auto;
     padding: 0 
